@@ -1,3 +1,5 @@
+* Remove deprecated API
+
 *1.0.3 (July 9th, 2009)
 
 * Add verify method for configured API key
